--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
+    "mongodb": "^6.7.0",
     "preline": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "realm-web": "^2.0.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
